--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,21 @@ address {
     font-style: normal;
 }
 
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
+    outline: 2px solid tomato;
+    padding: 32px 15px;
+    justify-content: center;
+}
+
+.section {
+    padding: 94px, 0;
+}
+
+
+/*----------------------headr------------------------*/
 .logo-web {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -58,16 +73,6 @@ address {
     text-decoration: none;
 }
 
-
-/*----------------------headr------------------------*/
-.container {
-    width: 1600px;
-    height: 80px;
-    padding: 32px 215px 32px 215px;
-    margin: 0, auto; 
-    outline: 1px, solid red;
-}
-
 .headr-link {
     font-weight: 500;
     font-size: 14px;
@@ -75,7 +80,6 @@ address {
     letter-spacing: 0.02em;
 
     color: #212121;
-
 }
 
 .headr-link:hover,
@@ -97,41 +101,75 @@ address {
     color: var(--link-color);
 }
 
-/*----------------------main------------------------*/
-.main {
-    position: absolute;
-width: 1600px;
-height: 600px;
-left: 0px;
-top: 80px;
+.header {
+    margin-bottom: 0px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    border-bottom: #FFFFFF;
+    background: #FFFFFF;
 
-background: #2F303A;
 
 }
 
+.headr-nav {
+    display: flex;
+    align-items: center;
+}
+
+.headr-list {
+    display: inline-flex;
+
+}
+
+/*----------------------main------------------------*/
+
 .main-button {
+    display: inline-block;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    display: flex;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    background-color: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 10px 32px;
+    min-width: 200px;
+    height: 50px;
+    text-decoration: none;
     align-items: center;
     text-align: center;
-    letter-spacing: 0.06em;
-
-    color: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    margin-bottom: 200px;
 }
 
 .main-h1 {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
+    margin: auto;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-
+    margin-bottom: 30px;
     color: #FFFFFF;
     max-width: 800px;
-   height: 120px;
+
+}
+
+.main-section {
+    text-align: center;
+    background: #2F303A;
+
+}
+
+.pictures-about {
+    display: flex;
+    justify-content: center;
+    padding-left: 215px;
+    padding-right: 215px;
 }
 
 .main-h3 {
@@ -142,6 +180,7 @@ background: #2F303A;
     text-transform: uppercase;
 
     color: var(--h3-color);
+    padding: 200px, 452px, 280px, 452px;
 }
 
 .main-h2 {
@@ -162,13 +201,29 @@ background: #2F303A;
     color: var(--paragraph-color);
 }
 
+.team-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tem-item {
+    display: flex;
+    flex-direction: colum;
+    align-items: center;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    margin-bottom: 94px;
+    border-radius: 0px, 0px, 4px, 4px;
+    background-color: #FFFFFF;
+}
+
 .team-name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-
+    padding-top: 30px;
+    padding-bottom: 10px;
     color: #212121;
 }
 
@@ -177,11 +232,16 @@ background: #2F303A;
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-
+    padding-top: 10px;
+    padding-bottom: 30px;
     color: #757575;
 }
 
 /*----------------------footer------------------------*/
+.footer {
+    background: #2F303A;
+}
+
 .address {
     font-size: 14px;
     line-height: 1.71;
@@ -214,6 +274,14 @@ background: #2F303A;
 }
 
 /*----------------------portfolio------------------------*/
+.portfolio-btn-list {}
+
+/*.img{display: inline;}
+
+.pictures-portfolio {
+    display: block;
+    max-width: 100%; height: auto;}*/
+    
 .main-portfolio-btn {
     font-family: 'Roboto';
     font-weight: 500;
@@ -222,6 +290,7 @@ background: #2F303A;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
+
 }
 
 .main-portfolio-btn:hover {
@@ -237,7 +306,6 @@ background: #2F303A;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-
     color: var(--h3-color);
 }
 
