--- a/css/styles.css
+++ b/css/styles.css
@@ -49,21 +49,11 @@ address {
     margin-left: auto;
     margin-right: auto;
     width: 1200px;
-    outline: 2px solid tomato;
+    /*outline: 2px solid tomato;*/
 }
 
 .section {
     padding: 94px, 0;
-}
-
-
-/*----------------------headr------------------------*/
-.header {
-    height: 80px;
-    display: inline-flex;
-    padding-top: 32px;
-    background: #FFFFFF;
-
 }
 
 .logo-web {
@@ -87,10 +77,19 @@ address {
 
 }
 
+.headr-logo {
+    display: block;
+    height: 31px;
+    width: 145px;
+    margin-left: 215px;
+
+}
+
 .link {
     text-decoration: none;
 }
 
+/*----------------------headr------------------------*/
 .headr-link {
     font-weight: 500;
     font-size: 14px;
@@ -98,23 +97,32 @@ address {
     letter-spacing: 0.02em;
 
     color: #212121;
-    width: 16px;
-    margin-top: 32px;
-
-}
-
-.portfolio {
-    margin-right: 50px;
-    margin-left: 50px;
-}
-
-.contact {
-    margin-right: 150px;
 }
 
 .headr-link:hover,
 :focus {
     color: var(--link-color);
+}
+
+.headr {
+    display: flex;
+    height: 80px;
+    width: 1600px;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.headr-list {
+    display: flex;
+}
+
+.headr-list .headr-items+.headr-items {
+    margin-left: 50px;
+}
+
+.headr-items {
+    width: 77px;
+
 }
 
 .headr-contact {
@@ -123,12 +131,19 @@ address {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: #757575;
-    width: 16px;
 
 }
 
-.email {
-    margin-right: 30px;
+.contact-tel {
+    width: 122px;
+    margin-left: 50px;
+    margin-right: 215px;
+
+}
+
+.contact-mail {
+    width: 135px;
+
 }
 
 .headr-contact:hover,
@@ -136,90 +151,72 @@ address {
     color: var(--link-color);
 }
 
-.headr-nav {
-    margin-left: 215px;
-    margin-top: -8px;
-    margin-bottom: 24px;
-    margin-right: 70px;
-    width: 145px;
-    height: 31px;
-
-}
-
-.headr-list {
-    display: inline-flex;
-
-}
-
 /*----------------------main------------------------*/
+.main {
+    width: 1600px;
+    height: 600px;
+    background: #2F303A;
+    padding-top: 200px;
+    padding-bottom: 200px;
+
+
+}
 
 .main-button {
-    display: inline-block;
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
-    color: #FFFFFF;
-    background-color: #2196F3;
+    color: #212121;
+    background: #F5F4FA;
     border-radius: 4px;
     padding: 10px 32px;
-    min-width: 200px;
+
     height: 50px;
     text-decoration: none;
-    align-items: center;
-    text-align: center;
-    margin-top: 30px;
-    border-color: #2196F3;
+    margin-top: 40px;
+    margin-left: 700px;
+
+    border: transparent;
+}
+
+.main-button:hover,
+:focus {
+    color: #FFFFFF;
+    background-color: var(--link-color)
 }
 
 .main-h1 {
+    margin: auto;
+    max-width: 800px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    margin: auto;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+
     color: #FFFFFF;
-    max-width: 800px;
-
-
-}
-
-.main-section {
-
-    text-align: center;
-    background: #2F303A;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    height: 600px;
-    width: 1600px;
 
 
 }
 
 .about {
-    width: 1600px;
     background: #E5E5E5;
-    height: 289px;
+    width: 1600px;
     padding-top: 94px;
-    padding-bottom: 94px;
+
+
 }
 
-.main-about {
+.about-list {
     display: flex;
-    padding-left: 200px;
-    max-width: 1200px;
-
+    margin-left: 215px;
 }
 
-.point1 {
-    margin-right: 30px;
-}
-
-.pictures-about {
-    display: flex;
-
+.about-list .about-items+.about-items {
+    margin-left: 30px;
 }
 
 .main-h3 {
@@ -228,9 +225,10 @@ address {
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-
+    width: 270px;
+    height: 16px;
     color: var(--h3-color);
-    padding: 200px, 452px, 280px, 452px;
+
 }
 
 .main-h2 {
@@ -239,31 +237,64 @@ address {
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
-
+    padding-top: 94px;
     color: #212121;
+
+
+
 }
 
 .main-paragraph {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-
+    max-width: 300px;
+    width: 270px;
+    height: 75px;
+    margin-top: 10px;
     color: var(--paragraph-color);
+
+}
+
+.pictures {
+    display: flex;
+    justify-content: center;
+}
+
+.pictures .pictures-items+.pictures-items {
+    margin-left: 30px
+}
+
+.pictures-items {
+    margin-top: 50px;
+    width: 370px;
+    height: 294px;
+
+}
+
+.team {
+    width: 1600px;
+    background: #F5F4FA;
+}
+
+.team-list .team-items+.team-items {
+    margin-left: 30px;
 }
 
 .team-list {
     display: flex;
-    justify-content: space-between;
+    padding-left: 215px;
 }
 
-.tem-item {
-    display: flex;
-    flex-direction: colum;
-    align-items: center;
+.team-items {
+    width: 270px;
+    height: 368px;
+    background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    margin-bottom: 94px;
-    border-radius: 0px, 0px, 4px, 4px;
-    background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+
+
+
 }
 
 .team-name {
@@ -272,8 +303,7 @@ address {
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-    padding-top: 30px;
-    padding-bottom: 10px;
+
     color: #212121;
 }
 
@@ -282,20 +312,41 @@ address {
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-    padding-top: 10px;
-    padding-bottom: 30px;
+
     color: #757575;
 }
 
 /*----------------------footer------------------------*/
 .footer {
-    background: #2F303A;
     width: 1600px;
     height: 252px;
-    padding:60px 1154px 60px 215px;
+    padding-left: 215px;
+
+    background: #2F303A;
+}
+
+.footer-logo {
+    padding-top: 60px;
+
+}
+
+.footer-address {
+    padding-top: 20px;
+
+}
+
+.footer-mail {
+    padding-top: 9px;
+
+}
+
+.footer-tel {
+    padding-top: 9px;
 }
 
 .address {
+    padding-top: 9px;
+    font-style: normal;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -313,7 +364,7 @@ address {
 
 .footer-contact:hover,
 :focus {
-    color: #2196F3;
+    color: var(--link-color);
 }
 
 .logo-studio-footer {
@@ -326,20 +377,18 @@ address {
     color: white;
 }
 
-.footer-logo {
-    width: 231px;
-    height: 100px;
-    outline: 2px solid tomato;
+/*----------------------portfolio------------------------*/
+.portfolio-btn-list {
+    display: flex;
+    padding-top: 94px;
+    justify-content: center;
 }
 
-/*----------------------portfolio------------------------*/
-.portfolio-btn-list {}
 
-/*.img{display: inline;}
 
-.pictures-portfolio {
-    display: block;
-    max-width: 100%; height: auto;}*/
+.portfolio-btn-list .portfolio-btn-items+.portfolio-btn-items {
+    margin-left: 30px;
+}
 
 .main-portfolio-btn {
     font-family: 'Roboto';
@@ -349,15 +398,42 @@ address {
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
+    background: #F5F4FA;
+    border-radius: 4px;
+    border: transparent;
+    width: 128px;
+    height: 38px;
+}
+
+.main-portfolio-btn:hover,
+:focus {
+    background-color: var(--link-color);
+    color: white;
+}
+
+.pictures {
+    padding-bottom: 94px;
+}
+
+.portfolio-list {
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding-top: 56px;
+    padding-left: 15px;
 
 }
 
-.main-portfolio-btn:hover {
-    color: #FFFFFF;
+.portfolio-items {
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+
 }
 
-.main-portfolio-btn:focus {
-    color: var(--link-color);
+.pictures-text {
+
+    padding-left: 24px;
 }
 
 .main-portfolio-h3 {
@@ -365,6 +441,7 @@ address {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+
     color: var(--h3-color);
 }
 
