--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,7 @@ address {
 .headr-list {
     display: flex;
     margin-left: 93px;
+    margin-right: 250px;
 }
 
 .headr-list .headr-items+.headr-items {
@@ -127,11 +128,6 @@ address {
 .contact-tel {
     width: 122px;
     margin-left: 50px;
-}
-
-.contact-mail {
-    width: 135px;
-
 }
 
 .headr-contact:hover,
@@ -253,10 +249,6 @@ address {
 
 .pictures .pictures-items+.pictures-items {
     margin-left: 30px
-}
-
-.team {
-    background: #F5F4FA;
 }
 
 .team-list .team-items+.team-items {
@@ -385,7 +377,7 @@ address {
     background: #F5F4FA;
     border-radius: 4px;
     border: transparent;
-    
+
 }
 
 .main-portfolio-btn:hover,
