--- a/css/styles.css
+++ b/css/styles.css
@@ -45,18 +45,21 @@ address {
     font-style: normal;
 }
 
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
 .container {
     margin-left: auto;
     margin-right: auto;
     width: 1200px;
-
+    padding-left: 15px;
+    padding-right: 15px;
     /*outline: 2px solid tomato;*/
 }
 
-.section {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+
 
 .logo-web {
     font-family: 'Raleway', sans-serif;
@@ -188,10 +191,6 @@ address {
 
 }
 
-.about {
-    padding-top: 94px;
-}
-
 .about-list {
     display: flex;
 }
@@ -222,11 +221,6 @@ address {
     color: #212121;
 }
 
-.img {
-    padding-top: 94px;
-    padding-bottom: 54px;
-}
-
 .main-paragraph {
     font-size: 14px;
     line-height: 1.71;
@@ -242,6 +236,7 @@ address {
 .pictures {
     display: flex;
     justify-content: center;
+
 }
 
 .pictures .pictures-items+.pictures-items {
@@ -250,6 +245,10 @@ address {
 
 .team-list .team-items+.team-items {
     margin-left: 30px;
+}
+
+.team-studio {
+    padding-bottom: 94px;
 }
 
 .team-list {
@@ -293,7 +292,6 @@ address {
 
 /*----------------------footer------------------------*/
 .footer {
-    padding-top: 60px;
     padding-bottom: 60px;
     height: 252px;
     background: #2F303A;
@@ -343,13 +341,15 @@ address {
 
 /*----------------------portfolio------------------------*/
 .line {
-
+    display: flex;
     border-bottom: 1px solid #ECECEC;
+    height: 80px;
 }
 
 .portfolio-btn-list {
     display: flex;
-    padding: 106px 22px;
+    padding-left: 22px;
+    padding-right: 22px;
     justify-content: center;
 }
 
@@ -370,6 +370,7 @@ address {
     background: #F5F4FA;
     border-radius: 4px;
     border: transparent;
+    padding: 6px 22px;
 
 }
 
@@ -379,22 +380,17 @@ address {
     color: white;
 }
 
-.pictures {
-    padding-bottom: 94px;
-    
-}
-
 .portfolio-list {
-
+    margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
-
+    justify-content: space-between;
 }
 
 .portfolio-items {
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
+    margin-bottom: 30px;
 
 }
 
