--- a/css/styles.css
+++ b/css/styles.css
@@ -143,14 +143,12 @@ address {
 
 /*----------------------main------------------------*/
 .main {
+   
     height: 600px;
     background: #2F303A;
     padding-top: 200px;
-    padding-bottom: 200px;
-
-
-}
-
+    padding-bottom: 200px;}
+    
 .main-button {
 
     font-weight: 700;
